Update and rename intex.html to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </main>
 
     <footer>
-        <p>© 2025 EduAcademic. All Rights Reserved.</p>
+        <p>Â© 2025 EduAcademic. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
+
