--- a/courses.html
+++ b/courses.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Courses - EduAcademic</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Courses</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body onload="verifyAccess()">
-    <header>
-        <h1>EduAcademic</h1>
-    </header>
-
-    <main>
-        <h2>Available Courses</h2>
-        <ul class="courses-list">
-            <li>?? Mathematics Mastery</li>
-            <li>?? Introduction to Programming</li>
-            <li>?? World History Essentials</li>
-            <li>? Physics Fundamentals</li>
-            <li>?? Business & Economics Basics</li>
-        </ul>
-    </main>
-
-    <footer>
-        <p>© 2025 EduAcademic. All Rights Reserved.</p>
-    </footer>
+<body>
+  <h1>Our Courses</h1>
+  <div id="course-container" class="course-grid"></div>
+  <script src="script.js"></script>
 </body>
 </html>
